UX: Fix overflow + wrap issues for long usernames

--- a/assets/stylesheets/common/discourse-post-event-invitees.scss
+++ b/assets/stylesheets/common/discourse-post-event-invitees.scss
@@ -22,8 +22,16 @@
       }
 
       .user {
+        max-width: 175px;
+        display: flex;
+        align-items: center;
+        white-space: nowrap;
         .username {
           margin-left: 0.5em;
+          text-overflow: ellipsis;
+          overflow: hidden;
+          color: var(--primary-high-or-secondary-low);
+          font-weight: bold;
         }
       }
 
